# cxx-cmake-googletest-project

./: .gitignore  CMakeLists.txt  README.md
include/: HelloWorld.h
src/: HelloWorld.cxx
test/: CMakeLists.txt  HelloWorldTest.cxx
